# FeatureEngineering

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 01.Introduction.md  Feature_Store_Intro.md  Feature_engnieering_intro.md
feature_stores/01.Feast/: Introduction.md
feature_stores/01.Feast/01.Driver_stats/: Run_driver_feature_store.ipynb
feature_stores/01.Feast/01.QuickStart/: README.ipynb
feature_stores/01.Feast/02.Breast_cancer/: materialize.py  (+4 more)
notebooks/: 01.Introduction.ipynb  01.Introduction.md  02.Mutual_Information.ipynb  03.Creating_Feature.ipynb  04.Clustering.ipynb  05.Principal_Component_Analysis.ipynb  06.Target_encoding.ipynb  07.Feature_grouping.ipynb  08.Feature_splitting.ipynb  09.Scalling.ipynb  10.Date_transformation.ipynb
notebooks/00.Data_preprocessing/: 01.Data_preprocessing.ipynb
notebooks/01.feature_eng/: 01.Introduction.ipynb  02.Mutual_Information.ipynb  03.Creating_Feature.ipynb  04.Clustering.ipynb  06.Target_encoding.ipynb  07.Feature_grouping.ipynb
notebooks/02.feature_selection/: 01.Introduction.ipynb  02.Feature_selection.ipynb  GA.py
notebooks/03.Dimension_reduction/: 01.Introduction_dimension_reduction.ipynb  05.Principal_Component_Analysis.ipynb  Dimension_reduction.ipynb
notebooks/Apps/: House_price.ipynb  Titanic.ipynb
notebooks/Exercise/: 01.Preprocessing.ipynb  02.Mutual_information.ipynb  03.Creating_Feature.ipynb  04.Creating_feature_clustering.ipynb  05.PCA.ipynb  06.Target_encoding.ipynb
version_chinese/: 1.data_preprocessing_cn.ipynb  2.feature_selection.ipynb  3.dimension_deduction.ipynb
(+8 files in other folders)
