[tool.poetry]
name = "featureengineering"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.4.2"
sklearn = "^0.0"
seaborn = "^0.11.2"
category-encoders = "^2.5.0"
xgboost = "^1.6.1"
feast = {extras = ["gcp"], version = "^0.22.1"}
pyspark = "3.1.2"
pandas-profiling = "^3.2.0"
scikit-learn = "^1.1.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
